@@ -41,6 +41,9 @@ test to fail.
 
 Issue #22. Fixed broken testGetFlagInfo() test.
 
+Created alternate validFloat() and validInt() functions that use shell built-ins
+where possible to increase performance and reduce the usage of the expr command.
+
 
 Changes with 1.0.3
 ------------------
